--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=cCXvYyoAAAAJ"
-  email            : "cs1170339@cse.iitd.ac.in"
-  email            : "kaivu1999@gmail.com"
+  email1            : "cs1170339@cse.iitd.ac.in"
+  email2            : "kaivu1999@gmail.com"
   researchgate     :  
   uri              :
   bitbucket        :
