--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=cCXvYyoAAAAJ"
   email1            : "cs1170339@cse.iitd.ac.in"
-  email2            : "kaivu1999@gmail.com"
+  email            : "kaivu1999@gmail.com"
   researchgate     :  
   uri              :
   bitbucket        :
