--- a/_config.yml
+++ b/_config.yml
@@ -195,6 +195,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  shades_of_kaivu:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
@@ -252,6 +255,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _shades_of_kaivu
+  - scope:
+      path: ""
+      type: shades_of_kaivu
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 
 
 # Sass/SCSS
