--- a/_config.yml
+++ b/_config.yml
@@ -86,12 +86,11 @@ analytics:
 author:
   name             : "Kaivlaya Swami"
   avatar           : "profile.jpg"
-  bio              : "Senior Undergrad Student at IIT Delhi."
-  location         : "Delhi"
+  bio              : "AI Engineer at DevRev | BTech CSE IIT Delhi | YOLO"
+  location         : "Banglore"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=cCXvYyoAAAAJ"
-  email1            : "cs1170339@cse.iitd.ac.in"
   email            : "kaivu1999@gmail.com"
   researchgate     :  
   uri              :
@@ -104,7 +103,7 @@ author:
   github           : "kaivu1999"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "kaivuuuu"
   impactstory      : 
   lastfm           :
   linkedin         : "kaivalya-swami-916613142"
