--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title                    : "Kaivalya"
 title_separator          : "-"
 name                     : &name "Kaivalya Swami"
 description              : &description "Senior Undergrad at IIT Delhi"
-url                      : https://kaivu1999.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/kaivu1999.github.io" # the subpath of your site, e.g. "/blog"
+url                      : https://www.kaivalyaswami.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "kaivu1999.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
