Update Navigation Page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,9 @@
 # prevent it from being included in the site.
 
 main:
+  - title: "Shades of Kaivu"
+    url: /shades_of_kaivu/
+
   - title: "Publications"
     url: /publications/
 
@@ -17,8 +20,8 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
   - title: "CV"
     url: /cv/
@@ -26,5 +29,4 @@ main:
   # - title: "Guide"
   #   url: /markdown/
 
-  - title: "Shades of Kaivu"
-    url: /shades_of_kaivu/
+
